fix misc container spacing

--- a/static/Nstyles.css
+++ b/static/Nstyles.css
@@ -138,12 +138,12 @@
 }
 
 .misc-info{
-	font-size: 150%;
+	font-size: 130%;
 	color: #000000;
 	margin: 10px;
 }
 
 .misc-container{
 	text-align: center;
-	width: 50%;
+	width: 80%;
 }
